fix attribution and spacing

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -719,3 +719,10 @@ thead .tablesorter-headerAsc {
 #item_table {
 	font-size: 1.3rem;
 }
+
+#attribution-holder {
+    float: right;
+    width: auto;
+    height: 15px;
+    padding: 0px;
+}
